# Job-Hiring-Platform

./: .env.example  .pre-commit-config.yaml  Readme.md  config  pyproject.toml  reqs.txt  requirements.txt  requirements.txt.bak  tox.ini
app/: CSVWriter.py  SendinSES.py  admin.py  choices.py  custom_authentications.py  custom_middlewares.py  docusign_utils.py  encryption.py  insertCompanyData.py  memcache_stats.py  response.py  util.py  views.py
company/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
custom_reports/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
doc/: infertalent-psotman-API-collection.json
drf_api_logger/: __init__.py  admin.py  apps.py  collectstatic.py  events.py  insert_log_into_database.py  models.py  start_logger_when_server_starts.py  utils.py
email_template/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
fixture/: country.json  currency.json  key_skill.json  new_country.json  new_state.json  state.json  university.json
form/: admin.py  apps.py  cron.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
jobsite/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
main/: asgi.py  custom_middleware.py  routing.py  settings.py  storage_backends.py  urls.py
notification/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
organization/: models.py  serializers.py  urls.py  views.py
primary_data/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
(+430 files in other folders)
